image in editor in not cropped if style is changed to img-circle. It is also now properly centered if class changed. Fixes #64

--- a/app/assets/css/editor.css
+++ b/app/assets/css/editor.css
@@ -80,3 +80,7 @@
 .editor-themePalette--noPadding{
     padding: 0;
 }
+
+.editor-image--center{
+    display: inline-block;
+}
